# solidi

solanity-main/: CLAUDE.md  CMakeLists.txt  MODERNIZATION.md  build.sh  run_server_optimized.sh  server_test.sh
solanity-main/ci/: build.sh
solanity-main/cmake/: FindCUDA.cmake
solanity-main/src/: config.h  gpu-common.mk
solanity-main/src/cuda-ecc-ed25519/: vanity.cu  vanity_optimized.cu
